Fix tagline width to prevent unexpected wrapping at screen size 901px - 910px, adjust width of trustpilot logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,7 +227,7 @@ nav {
 }
 
 .trustpilot-stars {
-    width: 8.5rem;
+    width: 7.5rem;
 }
 
 .trustpilot-based-on {
@@ -796,6 +796,7 @@ footer {
 
     #tagline-travel-asia {
         font-size: 4.2rem;
+        width: 18.9rem;
     }
 
     #trustpilot {
@@ -844,7 +845,9 @@ footer {
     }
 
     #tagline-travel-asia {
+        width: auto;
         font-size: 7rem;
+        
     }
 
     #tagline-travel-with-us {
@@ -1155,6 +1158,29 @@ footer {
     #hero-video-body {
         width: 90%;
     }
+
+    #trustpilot {
+        width: 5rem;
+        height: 5rem;
+    }
+
+    .trustpilot-rating {
+        font-size: .6rem;
+        margin-bottom: .2rem;
+    }
+
+    .trustpilot-stars {
+        width: 3rem;
+    }
+
+    .trustpilot-based-on {
+        display: none;
+    }
+
+    .trustpilot-logo {
+        width: 2.5rem;
+    }
+
 }
 
 @media screen and (max-width: 435px) {
@@ -1221,20 +1247,8 @@ footer {
     }
 
     .trustpilot-rating {
-        font-size: .39rem;
+        font-size: .5rem;
         margin-bottom: .2rem;
-    }
-
-    .trustpilot-stars {
-        width: 3rem;
-    }
-
-    .trustpilot-based-on {
-        font-size: .4rem;
-    }
-
-    .trustpilot-logo {
-        width: 2.5rem;
     }
 
     #what-we-offer-heading {
